--- a/style.css
+++ b/style.css
@@ -1,63 +1,63 @@
-
 *{
-    margin: 0;
     padding: 0;
-    
+    margin: 0;
+    box-sizing: border-box;
+
+
+
 }
 
-
-
-
-
-
-
-
-body {
-
-
-    background: #ccf1f4;
-    font-family: sans-serif;
-
-    
-}
-
-h1{
-
-
+.class1{
+    margin-top: 10px;
     text-align: center;
-    color: #542c2c;
-    font-weight: normal;
-    margin-bottom: 20px;
-    text-decoration-color: aqua;
+    background-color: blanchedalmond;
+    padding: 80px;
+   
 
 
 
 }
+.class2{
+    margin-top: 60px;
+    text-align: center;
+    background-color: blanchedalmond;
+    padding: 80px;
 
-.from-wrap{
+
+}
+.class3{
+    margin-top: 60px;
+    text-align: center;
+    background-color: blanchedalmond;
+    padding: 80px;
 
 
-    width: 320;background: #3e3d3d;padding: 40px 20px;
-    box-sizing: border-box;
-    position: fixed;left: 50%;top: 50%;transform:(-50%,-50%) ;
+
+}
+.class4{
+    margin-top: 60px;
+    text-align: center;
+    background-color: blanchedalmond;
+    padding: 80px;
+
+
+
+}
+.green{
+    background-color: green;
+}
+.white{
+    background-color:white;
+}
+.blue{
+    background-color: blue;
+}
+.red{
+    background-color: red;
+}
+.footer{
+     display: flex;
     
-}
-input{
- 
-    width: 100%;
-    background-color: none;
-    border: 1px solid #fff;
-    border-radius: 3px; padding: 6px 20px;
-    box-sizing: border-box;
-    margin-bottom: 20px; 
-
-
-
-}
-
-input [type="button"]{
-
-    background: #760b0b;
-    border: 0;
-    cursor: pointer;
+    justify-content: space-between;
+    padding: 40px;
 }
