--- a/question_solve/style.css
+++ b/question_solve/style.css
@@ -1,33 +1,12 @@
-.tbl1{
-  border: 1px solid black;
-    
+table,tr,td{
+    border: 1px solid black;
+   
 }
-.d{
+table{
     width: 100%;
-    height: 70px;
-    width: 300px;
-
+    border-collapse:collapse;
 }
 .a{
-    border: 1px solid black;
-    height: 70px;
-    width: 20px;
+    width: 10px;
 
 }
-
-.e{
-    border: 1px solid black;
-    width: 30px;
-}
-.tbl2{
-    height: 60%;
-    width: 300px;
-}
-.f{
-    width: 100%;
-    border-bottom: 1px solid black;
-}
-.g{
-    width: 100%;
-}
-
