--- a/website/css/style.css
+++ b/website/css/style.css
@@ -63,6 +63,9 @@ h1 , h2 , h3{
 .text-gray{
     color: #555;
 }
+.bg-drak{
+background-color: #263238;
+}
 
 .btn{
     display: inline-block;
@@ -130,17 +133,17 @@ html{
 }
 
 .header .logo,
-.header .navbar a{
+.navbar a{
     color: white;
 }
 .header .logo{
     float: left; 
 }
-.header .navbar .nav-items{
+.navbar .nav-items{
     float:right;
     margin-top: 1rem;
 }
-.header .navbar .li-items{
+.navbar .li-items{
     display: inline-block;
     padding: 1rem;
     text-transform: uppercase;
@@ -261,4 +264,237 @@ html{
     content: '';
     display: block;
     clear: both;
+   
 }
+.fotter{
+    background-color: #263238;
+    color: #f4f4f4;
+    padding: 2rem;
+    text-align: center;
+    
+}
+.social-media-link i{
+    margin: 2rem;
+
+}
+
+
+
+/* #################bout page styling */
+
+
+
+
+.about{
+    padding: 5rem 0rem;
+}
+
+.about-heading{
+    border-bottom: 6px solid #e63946;
+
+}
+
+/* ###########about wrapper###### */
+.about-wrapper{
+    
+    text-align: center;
+    margin-top: 2rem;
+
+}
+.about-wrapper .left{
+    float: left;
+    width: 50%;
+}
+.about-wrapper .left{
+    float: left;
+    width: 50%;
+}
+.about-wrapper li::before{
+    content: '\2713';
+    color: #d64c7f;
+    font-weight: bold;
+    padding-right: 1rem;
+}
+
+/* ###########count styling#### */
+
+.counts{
+   
+    margin-top: 3rem;
+
+}
+.count-item{
+    float: left;
+   
+    width: 25%;
+    text-align: center;
+}
+.counts::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.count-item span{
+    font-size: 3rem;
+    font-weight: 700;
+    color: #e63946;
+}
+.count-item p{
+    font-weight: 700;
+    color: gray;
+    font-size: 1.8rem;
+
+}
+
+.cta-banner{
+    /* background:linear-gradient(25deg,#d64c7f,#ee4758 50%); */
+    background-color: #263238;
+    color: #f4f4f4;
+    padding: 1rem;
+    box-shadow: 5px 5px 10px#09000000;
+    margin-top: 3rem;
+
+
+}
+.cta-banner-left{
+    width: 60%;
+    float: left;
+}
+.cta-line{
+    font-weight: 700;
+    font-size: 2rem;
+    margin-top: 1rem;
+}
+.cta-banner-right{
+    float: right;
+    width: 48%;
+    text-align: right;
+}
+.btn-cta{
+    text-align: center;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 3rem;
+    text-transform: uppercase;
+    border: 4px solid black;
+    padding: 0.3rem 2.5em;
+    letter-spacing: 0.5rem;
+    color:purple;
+    background-color: aqua;
+
+
+
+}
+.cta-banner::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+
+/* ############# contact page style###### */
+
+
+.contact-from{
+    padding:5rem 0 ;
+    background:#f7f7f7 ;
+    
+
+}
+
+
+.from-wrapper::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.from-wrapper .company-address{
+height: 760px;
+  background:#fff ;
+  width: 49%;
+  float: left;
+ padding: 1rem; 
+
+}
+
+ 
+.from-wrapper .company-address i{
+    display: inline-block;
+    margin-right: 1rem;
+    text-transform: uppercase;
+    
+}
+
+.from-wrapper .company-address h2{
+    display: inline-block;
+    margin-right: 1rem;
+    text-transform: uppercase;
+}
+.from-wrapper .address-group{
+    margin: bottom 3rem; 
+}
+
+.from-wrapper .company-address img{
+max-width:90% ;
+min-height: 40rem;
+object-fit: cover;
+object-position: right;
+
+}
+/* ######fromstyling############ */
+.from-wrapper .from{
+    height: 760px;
+    font: size 1.6rem;
+    background:#fff ;
+     width: 49%;
+     float: right;
+     padding:1rem ;
+ }
+
+ .from h1::after{
+    content: '';
+    display: block;
+    width: 100%;
+    
+    clear: both;
+    border: 3px solid #e63946;
+ }
+ .from-wrapper .from label{
+    display: block;
+ }
+ 
+ .from-wrapper .from input{
+   padding: 0.5rem;
+   width: 100%;
+
+ }
+
+ .from-wrapper .from .from-group{
+    margin-bottom: 1.2rem;
+ }
+
+ .from-wrapper .from label::after{
+    content: '*';
+    color: #e63946;
+ }
+ .from-wrapper .from textarea{
+    width: 100%;
+    height: 300px;
+    padding: 1rem;
+
+ }
+ .from-btn{
+    display: block;
+    margin: 0 auto;
+    padding: 0.5rem 3rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    background-color: #e63946;
+    color: white;
+    outline:none ;
+    border: none;
+    cursor: pointer;
+ }
+
+
